oreslang-mirror/src/main/java/dev/oreslang/parser/Parser.java
package dev.oreslang.parser;

import dev.oreslang.ast.Ast;

import java.util.ArrayList;
import java.util.List;

import static dev.oreslang.parser.Token.Type.*;

public final class Parser {
    public static final String ROOT_MODULE = "__root__";

    public record SyntaxWarning(int line, int column, String message) { }

    public record ParseResult(Ast.Program program, List<SyntaxWarning> warnings) {
        public ParseResult {
            warnings = List.copyOf(warnings);
        }
    }

    private final List<Token> tokens;
    private final List<SyntaxWarning> warnings = new ArrayList<>();
    private int current;
    private boolean suppressRefinementOperators;

    public Parser(List<Token> tokens) {
        this.tokens = List.copyOf(tokens);
    }

    public static Ast.Program parse(String source) {
        return new Parser(new Lexer(source).scan()).parseProgram();
    }

    public static ParseResult parseWithWarnings(String source) {
        Parser parser = new Parser(new Lexer(source).scan());
        Ast.Program program = parser.parseProgram();
        return new ParseResult(program, parser.warnings);
    }

    public Ast.Program parseProgram() {
        String namespace = null;
        if (match(NAMESPACE)) {
            namespace = consume(IDENT, "expected flat namespace name").lexeme();
            if (check(DOT)) throw error(peek(), "namespaces cannot be nested or dotted");
            consume(SEMICOLON, "namespace declaration must end with ';'");
        }

        List<Ast.ImportDecl> imports = new ArrayList<>();
        while (match(IMPORT)) imports.add(parseImport());

        List<Ast.ModuleDecl> modules = new ArrayList<>();
        List<Ast.Decl> rootDeclarations = new ArrayList<>();

        while (!check(EOF)) {
            List<Ast.Annotation> annotations = parseAnnotations();
            Modifiers modifiers = parseModifiers();

            if (match(CLASS)) {
                modifiers = mergeModifiers(modifiers, parseModifiers());
                consume(DEFINE, "compatibility class declaration requires both 'class' and 'define'");
                modifiers = mergeModifiers(modifiers, parseModifiers());
                rejectCallableStructuralAnnotation(annotations, "class declarations");
                validateClassModifiers(modifiers);
                rootDeclarations.add(parseClass(
                        modifiers.visibility,
                        modifiers.isAbstract,
                        modifiers.visibility != Ast.Visibility.PUBLIC));
                continue;
            }

            if (check(CONTRACT) && defineFollowsAfterVisibilityModifiers()) {
                advance();
                modifiers = mergeModifiers(modifiers, parseModifiers());
                consume(DEFINE, "compatibility contract declaration requires both 'contract' and 'define'");
                modifiers = mergeModifiers(modifiers, parseModifiers());
                validateOnlyVisibilityModifiers(modifiers, "contracts");
                rejectCallableStructuralAnnotation(annotations, "contract declarations");
                rootDeclarations.add(parseContract(modifiers.visibility));
                continue;
            }

            if (check(INTERFACE) && defineFollowsAfterVisibilityModifiers()) {
                advance();
                modifiers = mergeModifiers(modifiers, parseModifiers());
                consume(DEFINE, "compatibility interface declaration requires both 'interface' and 'define'");
                modifiers = mergeModifiers(modifiers, parseModifiers());
                validateOnlyVisibilityModifiers(modifiers, "interfaces");
                rejectCallableStructuralAnnotation(annotations, "interface declarations");
                rootDeclarations.add(parseInterface(modifiers.visibility));
                continue;
            }

            if (match(DEFINE)) {
                modifiers = mergeModifiers(modifiers, parseModifiers());
                if (match(ACTOR, ISOACTOR)) {
                    rootDeclarations.add(parseDefinedActorClass(previous(), modifiers, annotations));
                    continue;
                }
                if (modifiers.shared) {
                    throw error(previous(), "'shared' must modify an actor declaration; use 'shared actor <Name>'");
                }
                if (match(MODULE)) {
                    if (modifiers.visibilitySeen || modifiers.async || modifiers.generator || modifiers.structural || modifiers.nonLexical || modifiers.trapped
                            || modifiers.isStatic || modifiers.isAbstract || modifiers.shared || modifiers.untrusted) {
                        throw error(previous(), "modules do not accept declaration modifiers");
                    }
                    rejectCallableStructuralAnnotation(annotations, "module declarations");
                    modules.add(parseModule(annotations));
                    continue;
                }
                if (match(CONTRACT)) {
                    modifiers = mergeModifiers(modifiers, parseModifiers());
                    validateOnlyVisibilityModifiers(modifiers, "contracts");
                    rejectCallableStructuralAnnotation(annotations, "contract declarations");
                    rootDeclarations.add(parseContract(modifiers.visibility));
                    continue;
                }
                if (match(CLASS)) {
                    modifiers = mergeModifiers(modifiers, parseModifiers());
                    rejectCallableStructuralAnnotation(annotations, "class declarations");
                    validateClassModifiers(modifiers);
                    rootDeclarations.add(parseClass(
                            modifiers.visibility,
                            modifiers.isAbstract,
                            modifiers.visibility != Ast.Visibility.PUBLIC));
                    continue;
                }
                if (match(INTERFACE, TRAIT)) {
                    modifiers = mergeModifiers(modifiers, parseModifiers());
                    validateOnlyVisibilityModifiers(modifiers, "interfaces/traits");
                    rejectCallableStructuralAnnotation(annotations, "interface declarations");
                    rootDeclarations.add(parseInterface(modifiers.visibility));
                    continue;
                }
                throw error(previous(), "expected module, class, interface, or trait after 'define'");
            }

            Ast.Decl declaration = parseDeclarationAfterModifiers(annotations, modifiers);
            if (declaration == null) throw error(peek(), "expected module or top-level declaration");
            rootDeclarations.add(declaration);
        }

        if (!rootDeclarations.isEmpty()) {
            modules.add(new Ast.ModuleDecl(ROOT_MODULE, List.of(), List.of(), rootDeclarations));
        }
        if (modules.isEmpty()) throw error(peek(), "a source file must define at least one module or top-level declaration");
        return new Ast.Program(namespace, imports, modules);
    }

    private Ast.ImportDecl parseImport() {
        Ast.ImportKind kind;
        List<String> names = new ArrayList<>();
        boolean wildcard = false;
        String namespace = null;

        if (match(STAR)) {
            kind = Ast.ImportKind.ALL;
            wildcard = true;
            consume(AS, "'import *' requires 'as <namespace>'");
            namespace = consume(IDENT, "expected import namespace").lexeme();
        } else {
            if (isLegacyFnSpelling()) {
                throw error(peek(), "function imports use 'import fnc', not 'import fn'");
            }
            if (match(MODULE)) kind = Ast.ImportKind.MODULE;
            else if (match(ACTOR)) kind = Ast.ImportKind.ACTOR;
            else if (match(CLASS)) kind = Ast.ImportKind.CLASS;
            else if (match(FNC)) kind = Ast.ImportKind.FUNCTION;
            else if (match(INTERFACE)) kind = Ast.ImportKind.INTERFACE;
            else if (match(CONTRACT)) kind = Ast.ImportKind.CONTRACT;
            else if (match(TRAIT)) kind = Ast.ImportKind.TRAIT;
            else if (match(STRUCT)) kind = Ast.ImportKind.STRUCT;
            else if (match(TYPE)) kind = Ast.ImportKind.TYPE;
            else if (match(TYPES)) kind = Ast.ImportKind.TYPES;
            else throw error(peek(), "expected module, actor, class, fnc, interface, contract, trait, struct, type, types, or * after import");

            if (match(STAR)) {
                wildcard = true;
                consume(AS, "wildcard import requires 'as <namespace>'");
                namespace = consume(IDENT, "expected import namespace").lexeme();
            } else {
                parseImportSelection(kind, names);
            }

            if (!wildcard && match(AS)) {
                if (names.size() != 1) {
                    throw error(previous(), "named import aliases require exactly one selected name");
                }
                namespace = consume(IDENT, "expected import alias").lexeme();
            }
        }

        consume(FROM, "expected 'from' in import");
        String path = consume(STRING, "expected quoted import path").lexeme();
        if (path.isBlank()) throw error(previous(), "import path cannot be empty");
        consume(SEMICOLON, "expected ';' after import");
        return new Ast.ImportDecl(kind, names, wildcard, namespace, path);
    }

    private void parseImportSelection(Ast.ImportKind kind, List<String> names) {
        Token.Type closing = null;
        if (match(LBRACE)) closing = RBRACE;
        else if (match(LPAREN)) closing = RPAREN;

        if (closing != null) {
            if (check(closing)) throw error(peek(), "import selection cannot be empty");
            do names.add(consumeImportName(kind)); while (match(COMMA));
            consume(closing, closing == RBRACE
                    ? "expected '}' after imported names"
                    : "expected ')' after imported names");
            return;
        }

        names.add(consumeImportName(kind));
        while (match(COMMA)) names.add(consumeImportName(kind));
    }

    private String consumeImportName(Ast.ImportKind kind) {
        if (kind == Ast.ImportKind.FUNCTION) {
            return consumeCallableName("expected imported function name");
        }
        return consume(IDENT, "expected imported name").lexeme();
    }

    private Ast.ModuleDecl parseModule(List<Ast.Annotation> annotations) {
        String name = consume(IDENT, "expected flat module name").lexeme();
        if (check(DOT)) throw error(peek(), "modules cannot be nested or dotted");
        List<Ast.TypeRef> contracts = match(CONFORMS) ? parseTypeRefList() : List.of();
        // Canonical module syntax is "define module Name as ... end".
        // Keep the pre-"as" spelling accepted while existing source migrates.
        match(AS);
        List<Ast.Decl> declarations = new ArrayList<>();
        while (!check(END) && !check(EOF)) declarations.add(parseModuleMember());
        consume(END, "expected 'end' to close module " + name);
        return new Ast.ModuleDecl(name, annotations, contracts, declarations);
    }

    private Ast.Decl parseModuleMember() {
        List<Ast.Annotation> annotations = parseAnnotations();
        Modifiers modifiers = parseModifiers();

        if (match(CLASS)) {
            modifiers = mergeModifiers(modifiers, parseModifiers());
            consume(DEFINE, "compatibility class declaration requires both 'class' and 'define'");
            modifiers = mergeModifiers(modifiers, parseModifiers());
            rejectCallableStructuralAnnotation(annotations, "class declarations");
            validateClassModifiers(modifiers);
            return parseClass(modifiers.visibility, modifiers.isAbstract, false);
        }

        if (check(CONTRACT) && defineFollowsAfterVisibilityModifiers()) {
            advance();
            modifiers = mergeModifiers(modifiers, parseModifiers());
            consume(DEFINE, "compatibility contract declaration requires both 'contract' and 'define'");
            modifiers = mergeModifiers(modifiers, parseModifiers());
            validateOnlyVisibilityModifiers(modifiers, "contracts");
            rejectCallableStructuralAnnotation(annotations, "contract declarations");
            return parseContract(modifiers.visibility);
        }

        if (check(INTERFACE) && defineFollowsAfterVisibilityModifiers()) {
            advance();
            modifiers = mergeModifiers(modifiers, parseModifiers());
            consume(DEFINE, "compatibility interface declaration requires both 'interface' and 'define'");
            modifiers = mergeModifiers(modifiers, parseModifiers());
            validateOnlyVisibilityModifiers(modifiers, "interfaces");
            rejectCallableStructuralAnnotation(annotations, "interface declarations");
            return parseInterface(modifiers.visibility);
        }

        if (match(DEFINE)) {
            modifiers = mergeModifiers(modifiers, parseModifiers());
            if (match(ACTOR, ISOACTOR)) {
                return parseDefinedActorClass(previous(), modifiers, annotations);
            }
            if (modifiers.shared || modifiers.untrusted) {
                throw error(previous(), "'shared'/'untrusted' must modify an actor declaration");
            }
            if (match(CONTRACT)) {
                modifiers = mergeModifiers(modifiers, parseModifiers());
                validateOnlyVisibilityModifiers(modifiers, "contracts");
                rejectCallableStructuralAnnotation(annotations, "contract declarations");
                return parseContract(modifiers.visibility);
            }
            if (match(CLASS)) {
                modifiers = mergeModifiers(modifiers, parseModifiers());
                rejectCallableStructuralAnnotation(annotations, "class declarations");
                validateClassModifiers(modifiers);
                return parseClass(modifiers.visibility,
                        modifiers.isAbstract, false);
            }
            if (match(INTERFACE, TRAIT)) {
                modifiers = mergeModifiers(modifiers, parseModifiers());
                validateOnlyVisibilityModifiers(modifiers, "interfaces/traits");
                rejectCallableStructuralAnnotation(annotations, "interface declarations");
                return parseInterface(modifiers.visibility);
            }
            throw error(previous(), "expected class, interface, or trait after 'define'");
        }

        Ast.Decl declaration = parseDeclarationAfterModifiers(annotations, modifiers);
        if (declaration != null) return declaration;
        throw error(peek(), "expected function, routine, class, interface, trait, type, or binding declaration");
    }

    private Ast.Decl parseDeclarationAfterModifiers(List<Ast.Annotation> annotations, Modifiers modifiers) {
        if (isLegacyFnSpelling()) {
            throw error(peek(), "functions are declared with 'fnc', not 'fn'");
        }
        if (match(ACTOR, ISOACTOR)) {
            Token actorToken = previous();
            boolean isolated = actorToken.type() == ISOACTOR;
            modifiers = mergeModifiers(modifiers, parseModifiers());

            if (isLegacyFnSpelling()) {
                throw error(peek(), "actor functions are declared with 'actor fnc', not 'actor fn'");
            }
            if (match(FNC)) {
                modifiers = mergeModifiers(modifiers, parseModifiers());
                Ast.ActorKind actorKind = resolveActorKind(actorToken, isolated, modifiers);
                return parseFunction(annotations, modifiers, Ast.CallableKind.FNC, actorKind);
            }
            if (match(ROUTINE)) {
                modifiers = mergeModifiers(modifiers, parseModifiers());
                Ast.ActorKind actorKind = resolveActorKind(actorToken, isolated, modifiers);
                return parseFunction(annotations, modifiers, Ast.CallableKind.ROUTINE, actorKind);
            }

            Ast.ActorKind actorKind = resolveActorKind(actorToken, isolated, modifiers);
            if (modifiers.async || modifiers.generator || modifiers.structural || modifiers.nonLexical || modifiers.trapped
                    || modifiers.isStatic || modifiers.isAbstract) {
                throw error(actorToken, "actor class declarations accept only visibility and actor-kind modifiers");
            }
            rejectCallableStructuralAnnotation(annotations, "actor class declarations");
            return parseActorClass(actorKind, modifiers.visibility);
        }
        if (match(FNC)) {
            modifiers = mergeModifiers(modifiers, parseModifiers());
            if (match(ACTOR, ISOACTOR)) {
                Token actorToken = previous();
                boolean isolated = actorToken.type() == ISOACTOR;
                modifiers = mergeModifiers(modifiers, parseModifiers());
                Ast.ActorKind actorKind = resolveActorKind(actorToken, isolated, modifiers);
                return parseFunction(annotations, modifiers, Ast.CallableKind.FNC, actorKind);
            }
            if (modifiers.shared || modifiers.untrusted) {
                throw error(previous(), "'shared'/'untrusted' must modify an actor declaration");
            }
            return parseFunction(annotations, modifiers, Ast.CallableKind.FNC);
        }
        if (match(ROUTINE)) {
            modifiers = mergeModifiers(modifiers, parseModifiers());
            if (match(ACTOR, ISOACTOR)) {
                Token actorToken = previous();
                boolean isolated = actorToken.type() == ISOACTOR;
                modifiers = mergeModifiers(modifiers, parseModifiers());
                Ast.ActorKind actorKind = resolveActorKind(actorToken, isolated, modifiers);
                return parseFunction(annotations, modifiers, Ast.CallableKind.ROUTINE, actorKind);
            }
            if (modifiers.shared || modifiers.untrusted) {
                throw error(previous(), "'shared'/'untrusted' must modify an actor declaration");
            }
            return parseFunction(annotations, modifiers, Ast.CallableKind.ROUTINE);
        }
        if (match(CONTRACT)) {
            validateOnlyVisibilityModifiers(modifiers, "contracts");
            rejectCallableStructuralAnnotation(annotations, "contract declarations");
            return parseContract(modifiers.visibility);
        }
        if (match(INTERFACE, TRAIT)) {
            validateOnlyVisibilityModifiers(modifiers, "interfaces/traits");
            rejectCallableStructuralAnnotation(annotations, "interface/trait declarations");
            return parseInterface(modifiers.visibility);
        }
        if (match(TYPE)) {
            validateNoModifiers(modifiers, "type aliases");
            rejectCallableStructuralAnnotation(annotations, "type aliases");
            return parseTypeAlias();
        }
        if (isBindingKind(peek().type())) {
            validateOnlyVisibilityModifiers(modifiers, "module bindings");
            return parseModuleBinding(annotations, modifiers.visibility);
        }
        return null;
    }

    private Ast.ActorKind resolveActorKind(Token actorToken, boolean isolated, Modifiers modifiers) {
        if (isolated && (modifiers.shared || modifiers.untrusted)) {
            throw error(
                    actorToken,
                    "'shared/untrusted isoactor' is contradictory; use either shared actor, untrusted actor, or isoactor");
        }
        if (modifiers.shared && modifiers.untrusted) {
            throw error(actorToken, "an actor cannot be both shared and untrusted");
        }
        if (modifiers.untrusted) return Ast.ActorKind.UNTRUSTED;
        return isolated ? Ast.ActorKind.PRIVATE : Ast.ActorKind.SHARED;
    }

    private Ast.FunctionDecl parseFunction(List<Ast.Annotation> annotations, Modifiers modifiers, Ast.CallableKind kind) {
        return parseFunction(annotations, modifiers, kind, Ast.ActorKind.NONE);
    }

    private Ast.FunctionDecl parseFunction(
            List<Ast.Annotation> annotations,
            Modifiers modifiers,
            Ast.CallableKind kind,
            Ast.ActorKind actorKind) {
        if (modifiers.isStatic) throw error(previous(), "'static fnc' is only valid inside a class");
        if (modifiers.isAbstract) throw error(previous(), "top-level/module callables cannot be abstract");
        if (modifiers.trapped && modifiers.async) {
            throw error(previous(), "async trap fnc/routine is not enabled until trap spans every await suspension");
        }
        if (modifiers.trapped && modifiers.generator) {
            throw error(previous(), "trap generator fnc/routine is not enabled until trap spans generator suspension");
        }
        if (modifiers.trapped && actorKind != Ast.ActorKind.NONE) {
            throw error(previous(), "trap actor callables are not enabled until actor supervision preserves the trap effect");
        }
        CallableStructural structural = normalizeCallableStructural(annotations, modifiers.structural);
        annotations = structural.annotations();
        String name = consumeCallableName("expected callable name");
        List<String> generics = parseGenericParameters();

        if (match(EQUAL)) {
            consume(PIPE, "lambda-style callable declarations use '= |Type name, ...| -> [ReturnType] { ... }'");
            List<Ast.Param> params = parseDeclaredPipeParameters();
            consume(PIPE, "expected closing '|' in lambda-style callable declaration");
            consume(ARROW, "lambda-style callable declarations use the slim arrow '->'");
            Ast.TypeRef returnType = check(LBRACE)
                    ? Ast.TypeRef.simple("void")
                    : parseTypeRef();
            List<Ast.Stmt> body = parseBlock();
            return new Ast.FunctionDecl(name, kind, modifiers.visibility, modifiers.async, modifiers.generator, structural.enabled(), modifiers.nonLexical, modifiers.trapped, actorKind,
                    generics, params, returnType, annotations, body);
        }

        consume(LPAREN, "expected '(' after callable name or '=' for lambda-style declaration");
        java.util.Set<String> structuralNames = structuralAnnotationNames(annotations);
        List<Ast.Param> params = applyStructuralAnnotations(parseParametersUntil(RPAREN, structuralNames), annotations);
        consume(RPAREN, "expected ')' after parameters");
        Ast.TypeRef returnType = parseReturnType(annotations);
        List<Ast.Stmt> body = parseBlock();
        return new Ast.FunctionDecl(name, kind, modifiers.visibility, modifiers.async, modifiers.generator, structural.enabled(), modifiers.nonLexical, modifiers.trapped, actorKind, generics, params,
                returnType, annotations, body);
    }

    private Ast.ClassDecl parseClass(
            Ast.Visibility visibility,
            boolean isAbstract,
            boolean filePrivateScope) {
        String name = consume(IDENT, "expected class name").lexeme();
        List<String> generics = parseGenericParameters();
        List<Ast.TypeRef> parents = match(EXTENDS) ? parseTypeRefList() : List.of();
        List<Ast.TypeRef> interfaces = match(IMPLEMENTS, IMPL) ? parseTypeRefList() : List.of();
        consume(AS, "expected 'as' after class header");
        boolean braceStyle = match(LBRACE);
        Token.Type classTerminator = braceStyle ? RBRACE : END;
        List<Ast.FieldDecl> fields = new ArrayList<>();
        List<Ast.MethodDecl> methods = new ArrayList<>();
        Ast.ConstructorDecl constructor = null;

        while (!check(classTerminator) && !check(EOF)) {
            List<Ast.Annotation> annotations = parseAnnotations();
            Modifiers mods = parseModifiers();

            if (check(DEFINE) || check(CLASS) || check(MODULE) || check(INTERFACE)
                    || check(ACTOR) || check(ISOACTOR)) {
                throw error(peek(),
                        "declarations cannot be nested inside classes; declare nested types at file or module scope");
            }

            if (isContextualIdentifier("constructor")) {
                if (constructor != null) {
                    throw error(peek(), "class '" + name + "' may declare only one constructor");
                }
                constructor = parseConstructor(
                        annotations, mods, name, visibility, filePrivateScope);
                continue;
            }

            if (check(IDENT) && peek().lexeme().equals(name) && checkNext(LPAREN)) {
                throw error(peek(),
                        "constructors are declared with 'constructor(...)', not the class name '"
                                + name + "(...)'");
            }

            if (isLegacyFnSpelling()) {
                if (mods.isStatic) throw error(peek(), "static class functions use 'static fnc', not 'static fn'");
                throw error(peek(), "instance methods omit 'fn'/'fnc'; declare the method name directly");
            }
            if (isBindingKind(peek().type())) {
                validateClassFieldModifiers(mods);
                fields.add(parseField(annotations, mods.visibility));
                continue;
            }
            if (check(IDENT) && checkNext(COLON)) {
                validateClassFieldModifiers(mods);
                fields.add(parseColonField(annotations, mods.visibility));
                continue;
            }
